# django_reminders

./: .env  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Pipfile  Procfile  README.md  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt  sample.env  setup.sh  start.sh
api/: admin.py  decorators.py  helper.py  models.py  responses.py  serializers.py  urls.py  views.py  views_sql.py
api/migrations/: 0001_initial.py  0002_auto_20210530_1616.py  0003_link_user.py  0004_auto_20210608_0102.py  0005_alter_link_id.py  0006_alter_link_url.py  0007_alter_link_url.py  0008_link_flag.py  0009_link_add_start_time_in_sec.py  0010_rename_start_time_in_sec_link_start_time.py
api/services/: link_services.py  raw_sql.py  youtube.py
api/templates/: HomeTemplate.html  redirect-to-frontend.html
api/templates/api/: PingTemplate.html
api/tests/: test_helper.py  test_links.py
api/tests/factories/: auth_user_factory.py  link_factory.py
core/: serializers.py
django_reminders/: asgi.py  sample.env  settings.py  urls.py  wsgi.py
people/: admin.py  models.py
people/migrations/: 0001_initial.py
