[tool.poetry]
name = "django-reminders"
version = "0.1.0"
description = ""
authors = ["Fullchee Zhang <fullchee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
