[tool.poetry]
name = "django-reminders"
version = "0.1.0"
description = ""
authors = ["Fullchee Zhang <fullchee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
django-environ = "^0.11.2"  # used in settings.py
django-tinymce = "^3.7.1"   # for TinyMCE in Django admin
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"  # used in settings.py

# allow the use of QuerySet[MyModel]
# https://github.com/typeddjango/django-stubs#i-cannot-use-queryset-or-manager-with-type-annotations
# https://github.com/typeddjango/django-stubs/tree/master/ext
# django-stubs-ext = "^5"


[tool.poetry.group.test.dependencies]
factory-boy = "^3.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
